Shelf of shame takes plays of board games included in big boxes into account