@@ -4,7 +4,6 @@ package edu.boardgames.collections.explorer.infrastructure;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public final class Async {
@@ -18,7 +17,7 @@ public final class Async {
 	public static <T, R> Stream<R> map(Stream<T> input, Function<T, R> mapper) {
 		List<CompletableFuture<R>> operations = input
 				.map(arg -> CompletableFuture.supplyAsync(() -> mapper.apply(arg)))
-				.collect(Collectors.toList());
+				.toList();
 
 		return CompletableFuture.allOf(operations.toArray(new CompletableFuture[0]))
 				.thenApply(v -> operations.stream().map(CompletableFuture::join))
